asm/rr-destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ta-server-destionationrule
spec:
  host: ta-server-service.sharedvpc.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN

    outlierDetection:
      splitExternalLocalOriginErrors: true
      consecutiveLocalOriginFailures: 10

      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 2s
